Fixed header spacing

--- a/app/assets/stylesheets/spree/frontend/style.css
+++ b/app/assets/stylesheets/spree/frontend/style.css
@@ -1204,7 +1204,6 @@ body, html {
 }
 
 .input-group-search {
-  height: 9px;
   border: 1px solid #dee2e6;
   border-radius: 2rem;
   overflow: hidden;
